--- a/RehabilitationEquipmentAndroidApp/app/src/main/res/values/arrays.xml
+++ b/RehabilitationEquipmentAndroidApp/app/src/main/res/values/arrays.xml
@@ -5,4 +5,10 @@
         <item>idle</item>
         <item>maintenance</item>
     </string-array>
+
+    <string-array name="userId_options">
+        <item>working</item>
+        <item>idle</item>
+        <item>maintenance</item>
+    </string-array>
 </resources>
