--- a/RehabilitationEquipmentAndroidApp/app/src/main/res/layout/activity_simulation.xml
+++ b/RehabilitationEquipmentAndroidApp/app/src/main/res/layout/activity_simulation.xml
@@ -82,7 +82,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.83">
+        app:layout_constraintVertical_bias="0.741">
 
         <TextView
             android:layout_width="0dp"
@@ -109,7 +109,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.699">
+        app:layout_constraintVertical_bias="0.678">
 
         <TextView
             android:layout_width="0dp"
@@ -128,7 +128,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayoutBloodPressure"
+        android:id="@+id/linearLayoutUserId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -136,21 +136,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.767">
+        app:layout_constraintVertical_bias="0.826">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="@string/blood_pressure_label" />
+            android:text="@string/user_id_label" />
 
-        <EditText
-            android:id="@+id/editTextBloodPressure"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/hint" />
+        <Spinner
+            android:id="@+id/spinnerUserId"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -162,7 +160,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.641">
+        app:layout_constraintVertical_bias="0.598">
 
         <TextView
             android:layout_width="0dp"
@@ -182,7 +180,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.569">
+        app:layout_constraintVertical_bias="0.528">
 
         <TextView
             android:layout_width="0dp"
@@ -207,7 +205,8 @@
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineTop">
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+        app:layout_constraintVertical_bias="0.441">
 
         <TextView
             android:layout_width="0dp"
@@ -234,7 +233,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.433">
+        app:layout_constraintVertical_bias="0.349">
 
         <TextView
             android:layout_width="0dp"
@@ -261,7 +260,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.374">
+        app:layout_constraintVertical_bias="0.28">
 
         <TextView
             android:layout_width="0dp"
@@ -275,32 +274,6 @@
             android:layout_width="230dp"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-        app:layout_constraintVertical_bias="0.293">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="@string/type_label" />
-
-        <EditText
-            android:id="@+id/editTextType"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/hint" />
     </LinearLayout>
 
     <LinearLayout
