--- a/RehabilitationEquipmentUserApp/app/src/main/res/layout/row_layout.xml
+++ b/RehabilitationEquipmentUserApp/app/src/main/res/layout/row_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,12 +16,12 @@
         android:id="@+id/text_bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/image"
         android:layout_alignTop="@id/image"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@id/image"
         android:text="Texto en Negrita"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_grey"
@@ -29,9 +29,9 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/image"
         android:layout_below="@id/text_bold"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="20dp"
         android:text="Texto en color gris"
         android:textColor="#757575"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
 
-</LinearLayout>
+</RelativeLayout>
