--- a/RehabilitationEquipmentUserApp/app/src/main/res/values/colors.xml
+++ b/RehabilitationEquipmentUserApp/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="titleBackgroundColor">#9FA8DA</color>
+    <color name="titleBackgroundColor">#03A9F4</color>
 </resources>
